Add better user UI

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Werewolf</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link href="https://fonts.googleapis.com/css2?family=Nova+Cut&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/be3f22ff69.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
